overlap issue with audio player on load fixed

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,10 +138,7 @@ img {
 	max-width: 100%;
 	height: auto;
 }
-h2:after {
-	content: '.';
-	color: #cc1313;
-}
+
 .bg1 {
 	background: url(../img/BG/banner1.jpg) center center no-repeat;
 	background-size: cover;
@@ -468,7 +465,7 @@ a.playlist_expander{
 .pre_sticky.rock_player{
 	position: absolute;
 	left:0;
-	bottom:0;
+	bottom:30px;
 }
 .sticky_player{
 	background:#000000;
@@ -822,6 +819,7 @@ a.playlist_expander{
 	width:100%;
 	left:0;
 	z-index:999;
+	margin-top:28px;
 	margin-bottom:0;
 }
 .noPlayer{
